[project]
name = "canadian-xmas"
version = "0.1.0"
description = "A Canadian Christmas shopping experience powered by AI"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "agno>=2.2.13",
    "authlib>=1.3.2",
    "coloredlogs>=15.0.1",
    "httpx[http2]>=0.28.1",
    "openai>=2.8.0",
    "pgvector>=0.3.6",
    "psycopg[binary]>=3.2.12",
    "python-decouple>=3.8",
    "sqlalchemy>=2.0.44",
    "streamlit>=1.51.0",
    "tqdm>=4.66.0",
]

[dependency-groups]
dev = [
    "ipdb>=0.13.13",
]



